apps/base/ai-workloads/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-edge
  # labels:
  #   app.kubernetes.io/component: monitoring
